# mapswipe2hdx

./: README.md  config_sample.yaml  pyproject.toml  streamlit.py
mapswipe2hdx/: app.py
